packages/typ/tests/fixtures/diagnostics/0326_fun_explicit_poly_returns_int_09.ml.infer.expected
File "0326_fun_explicit_poly_returns_int_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0326_fun_explicit_poly_returns_int_09 is not a valid module name.

File "0326_fun_explicit_poly_returns_int_09.ml", line 1, characters 30-40:
1 | let bad_iota : 'a. 'a -> 'a = fun _ -> 8
                                  ^^^^^^^^^^
Error: This definition has type int -> int which is less general than
         'a. 'a -> 'a
       The type int is not a type variable.
