packages/typ/tests/fixtures/diagnostics/0326_fun_explicit_poly_returns_int_09.ml
let bad_iota : 'a. 'a -> 'a = fun _ -> 8
